--- a/tmpl/container.tmpl
+++ b/tmpl/container.tmpl
@@ -41,6 +41,20 @@
         <?js doc.modules.forEach(function(module) { ?>
             <?js if (module.classdesc) { ?>
                 <div class="class-description"><?js= module.classdesc ?></div>
+            <?js } else { ?>
+                <h1 id="<?js= doc.name ?>-title" class="has-anchor">
+                <?js if (doc.ancestors && doc.ancestors.length) { ?>
+                    <span class="ancestors"><?js= doc.ancestors.join('') ?></span>
+                <?js } ?>
+                <?js if(doc.alias){ ?>
+                    <?js= doc.alias ?>
+                <?js } else { ?>
+                    <?js= doc.name ?>
+                <?js } ?>
+                <?js if (doc.variation) { ?>
+                    <sup class="variation"><?js= doc.variation ?></sup>
+                <?js } ?>
+                </h1>
             <?js } ?>
         <?js }) ?>
     <?js } ?>
